--- a/cppPractice/cppPractice/cppPractice.vcxproj.filters
+++ b/cppPractice/cppPractice/cppPractice.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="WellknownProblems.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GraphProblems.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h">
